--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h2> Publications </h2>
 
     <ol reversed>
-    <li>Swapnil Pravin, Brian Chang, Endao Han, Lionel London, Daniel I. Goldman, Heinrich M. Jaeger, S. Tonia Hsieh, "Effect of Two Parallel Intruders on Net Work During Granular Penetrations", Phys. Rev. E, in press. <a href='https://arxiv.org/abs/2010.15172' target='_blank'>preprint</a>
+    <li>Swapnil Pravin, Brian Chang, Endao Han, Lionel London, Daniel I. Goldman, Heinrich M. Jaeger, S. Tonia Hsieh, "Effect of Two Parallel Intruders on Net Work During Granular Penetrations", Physical Review E, in press. <a href='https://arxiv.org/abs/2010.15172' target='_blank'>preprint</a>
     <br>
 
     <li>Swapnil Pravin , Edward Berger, DeForest Mellon Jr., Matthew A. Reidenbach, "Effects of sensilla morphology on mechanosensory sensitivity in the crayfish", <i>Bioinspiration & Biomimetics,</i> 10.3: 036006. (2015) <a href="https://iopscience.iop.org/article/10.1088/1748-3190/10/3/036006/meta?casa_token=Ol2NUa9NkzYAAAAA:UY19L4L-yylC2wkoQA9yFVz1l1Z0WvDNI4X5McoaSNKMGnE3dUizlYQilfn__gsi3g2YVkxEkU3snlI" target="_blank">link</a> | <a href="files/Pravin_et_al_2015.pdf">PDF</a>
@@ -84,7 +84,7 @@
     <li>Swapnil Pravin, Matthew A. Reidenbach, "Simultaneous sampling of flow and odorants by crustaceans can aid searches within a turbulent plume", <i>Sensors,</i> 13: 16591-16610 (2013) <a href="https://www.mdpi.com/1424-8220/13/12/16591" target="_blank">link</a> | <a href="files/Pravin_Reidenbach_2013.pdf">PDF</a>
     <br>
 
-    <li>Swapnil Pravin, DeForest Mellon Jr., Matthew A. Reidenbach, "Micro-scale fluid and odorant transport to antennules of the crayfish, Procambarus clarkii" <i>Journal of Comparative Physiology A,</i> 198(9): 669-681 (2012) <a href="https://link.springer.com/article/10.1007/s00359-012-0738-x" target="_blank">link</a> | <a href="files/Pravin_Mellon_Reidenbach_2012.pdf">PDF</a>
+    <li>Swapnil Pravin, DeForest Mellon Jr., Matthew A. Reidenbach, "Micro-scale fluid and odorant transport to antennules of the crayfish, Procambarus clarkii", <i>Journal of Comparative Physiology A,</i> 198(9): 669-681 (2012) <a href="https://link.springer.com/article/10.1007/s00359-012-0738-x" target="_blank">link</a> | <a href="files/Pravin_Mellon_Reidenbach_2012.pdf">PDF</a>
     <br>
     </ol>
 
