--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
 		<div>
 			<p> Aquatic invertebrates use their sensory hairs to navigate the chemical landscape around them, and track the source of odorants using their oldfactory appendages. They commonly use their antenna to “sniff” the dispersing adorants around them. This has important implications for the design of artificial biomimetic sensors that can accurately track and identify sources of chemicals and pollutants in the natural environment. </p>
 		</div>
-
+		<figure>
 			<video controls>
                 <source src="files/images/crayfish_antennule_flick.mp4" alt="crayfish figure" type="video/mp4">
             </video>
             <figcaption> Above: Antennule flicking action of the freshwater crayfish, <i>Procambarus clarkii</i></figcaption>
+		</figure>	
 	</div>
 
 	<br>
@@ -60,11 +61,13 @@
 		<div>
 			<p> The odorant plumes found in benthic environments are disperse and filamentous in nature. I use a combination of particle image velocimetry, laser induced fluorescence and numerical modeling to examine the instantaneous nature of turbulent odorant plumes in the context of aquatic chemical sensing.  </p>
 		</div>
-
-        <video controls>
-            <source src="files/images/plume_conc.mp4" alt="turbulent plume figure" type="video/mp4">
-        </video>
-        <figcaption> Above: Instantaneous odorant concentrations in a turbulent plume.</figcaption>
+		
+		<figure>
+			<video controls>
+				<source src="files/images/plume_conc.mp4" alt="turbulent plume figure" type="video/mp4">
+			</video>
+			<figcaption> Above: Instantaneous odorant concentrations in a turbulent plume.</figcaption>
+		</figure>
 	</div>
 
 	<br><hr>
