--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
     <!-- Topic 1 -->
     <div>
         <h3> Physics of impact on granular media </h3>
-            <div>
-                <p> Granular media shows complex characteristics of both fluids and solids. I study the physics of rapid impact on granular media surfaces. Understanding this physics has implications for the design of robotic locomotion systems that seek to traverse unstable environments around them. It also enhances our understanding of animal locomotion and the role played by morphology and kinematics of animal foot in movement on granular media. I am currently working on the force response resulting from multiple intruders separated by a distance from one another. </p>
-            </div>
+		
+		<div>
+			<p> Granular media shows complex characteristics of both fluids and solids. I study the physics of rapid impact on granular media surfaces. Understanding this physics has implications for the design of robotic locomotion systems that seek to traverse unstable environments around them. It also enhances our understanding of animal locomotion and the role played by morphology and kinematics of animal foot in movement on granular media. I am currently working on the force response resulting from multiple intruders separated by a distance from one another. </p>
+		</div>
 
-            <figure>
-                <!-- <img src="files/images/particles_splash.gif" alt="particles splash"> -->
-                <video controls poster="files/images/intrusion_poster.jpg">
-                    <source src="files/images/intrusion.mp4" alt="granular intrusion figure" type="video/mp4">
-                </video>
-                <figcaption>Above: Two parallel rods impacting granular particles. The blue lines are inter-particle forces. The particles themselves are not shown.</figcaption>
-            </figure>
+		<figure>
+			<!-- <img src="files/images/particles_splash.gif" alt="particles splash"> -->
+			<video controls poster="files/images/intrusion_poster.jpg">
+				<source src="files/images/intrusion.mp4" alt="granular intrusion figure" type="video/mp4">
+			</video>
+			<figcaption>Above: Two parallel rods impacting granular particles. The blue lines are inter-particle forces. The particles themselves are not shown.</figcaption>
+		</figure>
 	</div>
 
 
@@ -75,7 +76,7 @@
     <h2> Publications </h2>
 
     <ol reversed>
-    <li>Swapnil Pravin, Brian Chang, Endao Han, Lionel London, Daniel I. Goldman, Heinrich M. Jaeger, S. Tonia Hsieh, "Effect of Two Parallel Intruders on Net Work During Granular Penetrations", Physical Review E, in press. <a href='https://arxiv.org/abs/2010.15172' target='_blank'>preprint</a>
+    <li>Swapnil Pravin, Brian Chang, Endao Han, Lionel London, Daniel I. Goldman, Heinrich M. Jaeger, S. Tonia Hsieh, "Effect of Two Parallel Intruders on Net Work During Granular Penetrations", <i>Physical Review E</i>, in press. <a href='https://arxiv.org/abs/2010.15172' target='_blank'>preprint</a>
     <br>
 
     <li>Swapnil Pravin , Edward Berger, DeForest Mellon Jr., Matthew A. Reidenbach, "Effects of sensilla morphology on mechanosensory sensitivity in the crayfish", <i>Bioinspiration & Biomimetics,</i> 10.3: 036006. (2015) <a href="https://iopscience.iop.org/article/10.1088/1748-3190/10/3/036006/meta?casa_token=Ol2NUa9NkzYAAAAA:UY19L4L-yylC2wkoQA9yFVz1l1Z0WvDNI4X5McoaSNKMGnE3dUizlYQilfn__gsi3g2YVkxEkU3snlI" target="_blank">link</a> | <a href="files/Pravin_et_al_2015.pdf">PDF</a>
