--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h2> Publications </h2>
 
     <ol reversed>
-    <li>Swapnil Pravin, Brian Chang, Endao Han, Lionel London, Daniel I. Goldman, Heinrich M. Jaeger, S. Tonia Hsieh, "Effect of Two Parallel Intruders on Net Work During Granular Penetrations", <i>Physical Review E</i>, in press. <a href='https://arxiv.org/abs/2010.15172' target='_blank'>preprint</a>
+    <li>Swapnil Pravin, Brian Chang, Endao Han, Lionel London, Daniel I. Goldman, Heinrich M. Jaeger, S. Tonia Hsieh, "Effect of two parallel intruders on total work during granular penetrations", <i>Physical Review E</i>, 104: 024902. (2021). <a href='https://journals.aps.org/pre/abstract/10.1103/PhysRevE.104.024902' target='_blank'>link</a> | <a href="files/Pravin et al_2021(PRE).pdf">PDF</a>
     <br>
 
     <li>Swapnil Pravin , Edward Berger, DeForest Mellon Jr., Matthew A. Reidenbach, "Effects of sensilla morphology on mechanosensory sensitivity in the crayfish", <i>Bioinspiration & Biomimetics,</i> 10.3: 036006. (2015) <a href="https://iopscience.iop.org/article/10.1088/1748-3190/10/3/036006/meta?casa_token=Ol2NUa9NkzYAAAAA:UY19L4L-yylC2wkoQA9yFVz1l1Z0WvDNI4X5McoaSNKMGnE3dUizlYQilfn__gsi3g2YVkxEkU3snlI" target="_blank">link</a> | <a href="files/Pravin_et_al_2015.pdf">PDF</a>
