--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1> Swapnil Pravin </h1>
 
     <div>
-    <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google scholar</a> | <a href="https://orcid.org/0000-0003-2781-3725" target="_blank">ORCID</a> </div>
+    <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google scholar</a> | <a href="https://orcid.org/0000-0003-2781-3725" target="_blank">ORCID</a> | <a href="#pubs">Publications</a> </div>
 
     <h2> Research interests </h2>
 
@@ -73,7 +73,7 @@
 
 	<br><hr>
     <!-- ================================================================ -->
-    <h2> Publications </h2>
+    <h2 id="pubs"> Publications </h2>
 
     <ol reversed>
     <li>Swapnil Pravin, Brian Chang, Endao Han, Lionel London, Daniel I. Goldman, Heinrich M. Jaeger, S. Tonia Hsieh, "Effect of two parallel intruders on total work during granular penetrations", <i>Physical Review E</i>, 104: 024902. (2021). <a href='https://journals.aps.org/pre/abstract/10.1103/PhysRevE.104.024902' target='_blank'>link</a> | <a href="files/Pravin et al_2021(PRE).pdf">PDF</a>
