reddit tracker chart added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
     <h1> Swapnil Pravin </h1>
 
     <div>
-    <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google scholar</a> | <a href="https://orcid.org/0000-0003-2781-3725" target="_blank">ORCID</a> | <a href="#pubs">Publications</a> </div>
+        <a href="#research">Research</a> | <a href="#pubs">Publications</a> | <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google Scholar (external link)</a> 
+    </div>
 
-    <h2> Research interests </h2>
+    <h2 id="investing"> Reddit tracker </h2>
+    This chart tracks the number of members on the <i>wallstreetbets</i> and <i>investing</i> subreddits on the popular social media platform Reddit. This can be a measure of people's interest level in stocks.
+    <figure>
+        <img src="files/images/plot.jpeg" alt="subscribers chart" type="image/jpeg">
+        <figcaption> Above: Reddit member count</i></figcaption>
+    </figure>	
+
+    <h2 id="research"> Research interests </h2>
 
     <!-- Topic 1 -->
     <div>
