--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     This chart tracks the number of members on the <i>wallstreetbets</i> and <i>investing</i> subreddits on the popular social media platform Reddit. This can be a measure of people's interest level in stocks.
     <figure>
         <img src="files/images/plot.jpeg" alt="subscribers chart" type="image/jpeg">
-        <figcaption> Above: Reddit member count</i></figcaption>
+        <figcaption> Above: Subreddit member count</i></figcaption>
     </figure>	
 
     <h2 id="research"> Research interests </h2>
