removed reddit tracker from home page

--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
 
     <h1> Swapnil Pravin </h1>
 
+    <!-- Navbar -->
     <div>
-        <a href="#research">Research</a> | <a href="#pubs">Publications</a> | <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google Scholar (external link)</a> 
+        <a href="#pubs">Publications</a> | <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google Scholar</a> 
     </div>
 
-    <h2 id="investing"> Reddit tracker </h2>
-    This chart tracks the number of members on the <i>wallstreetbets</i> and <i>investing</i> subreddits on the popular social media platform Reddit. This can be a measure of people's interest level in stocks.
-    <figure>
-        <img src="files/images/plot.jpeg" alt="subscribers chart" type="image/jpeg">
-        <figcaption> Above: Subreddit member count</i></figcaption>
-    </figure>	
+    <!--
+        <h2 id="investing"> Reddit tracker </h2>
+        This chart tracks the number of members on the <i>wallstreetbets</i> and <i>investing</i> subreddits on the popular social media platform Reddit. This can be a measure of people's interest level in stocks.
+        <figure>
+            <img src="files/images/plot.jpeg" alt="subscribers chart" type="image/jpeg">
+            <figcaption> Above: Subreddit member count</i></figcaption>
+        </figure>	
+    -->
 
     <h2 id="research"> Research interests </h2>
 
@@ -101,16 +104,6 @@
     </ol>
 
     <br><hr>
-    <!-- ================================================================ -->
-	<!--
-    <h2> Education </h2>
-    <p id="edu">
-    2009 &nbsp; B.Tech &nbsp; IIT Kharagpur, Mechanical Engineering <br>
-    2014 &nbsp; Ph.D &nbsp; University of Virginia, Mechanical and Aerospace Engineering <br>
-    2016-2019 &nbsp; Post-Doc &nbsp; Temple University, Integrative Biology
-    </p>
-    <br><hr>
-	-->
     <!-- ================================================================ -->
     <h2> Contact </h2>
     swapnilpravin@gmail.com
