--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
 <body>
 
-    <h1> Swapnil Pravin </h1>
+    <h2> Swapnil Pravin </h2>
 
     <!-- Navbar -->
-    <div>
+    
+    <!-- <div>
         <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google Scholar</a> 
     </div>
+    -->
 
     <!--
         <h2 id="investing"> Reddit tracker </h2>
@@ -50,7 +52,7 @@
     <br><hr>
     -->
     <!-- ================================================================ -->
-    <h2> Contact </h2>
+    <!-- <h2> Contact </h2> -->
     swapnilpravin@gmail.com
 
     <!--
