Added github link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     
     <div>
-        <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google Scholar</a> 
+        <a href='https://github.com/swapnilpravin'>Github</a> | <a href='https://scholar.google.com/citations?user=hQTckcAAAAAJ&hl=en&oi=ao' target='_blank'>Google Scholar</a> 
     </div>
     
 
